--- a/integration-tests/discovery-nacos-tests/account-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-nacos-tests/account-provider/src/main/resources/bootstrap.yaml
@@ -31,3 +31,24 @@ spring:
         enabled: true
         server-addr: http://127.0.0.1:8848
         service: ${spring.application.name}
+
+    servicecomb:
+      webmvc:
+        publicKey:
+          providerEnabled: true
+          accessControl:
+            black:
+              - category: property
+                propertyName: serviceName
+                # property value match expression.
+                # only supports prefix match and postfix match and exactly match.
+                # e.g. hacker*, *hacker, hacker basic-consumer
+                rule: hacker
+              - category: property
+                propertyName: serviceName
+                rule: hacker2
+
+            white:
+              - category: property
+                propertyName: serviceName
+                rule: order*
