--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-nacos-gateway/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-nacos-gateway/pom.xml
@@ -53,5 +53,9 @@
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-jasypt</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-huawei-nacos</artifactId>
+    </dependency>
   </dependencies>
 </project>
