--- a/spring-cloud-huawei-common/pom.xml
+++ b/spring-cloud-huawei-common/pom.xml
@@ -82,6 +82,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.servicecomb</groupId>
+      <artifactId>service-center-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.servicecomb</groupId>
       <artifactId>http-client-common</artifactId>
     </dependency>
     <dependency>
