--- a/integration-tests/discovery-canary-test/nacos-tests-client/pom.xml
+++ b/integration-tests/discovery-canary-test/nacos-tests-client/pom.xml
@@ -19,37 +19,23 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
+    <artifactId>discovery-canary-test</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <artifactId>spring-cloud-huawei-parents</artifactId>
     <version>1.11.0-2021.0.x-SNAPSHOT</version>
-    <relativePath>../spring-cloud-huawei-parents</relativePath>
   </parent>
-
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>integration-tests</artifactId>
-  <name>Spring Cloud Huawei::Integration Tests</name>
-  <packaging>pom</packaging>
 
-  <modules>
-    <module>docker-build-config</module>
-    <module>docker-run-config</module>
-    <module>discovery-tests</module>
-    <module>discovery-nacos-tests</module>
-    <module>discovery-canary-test</module>
-    <module>mesh-tests</module>
-    <module>cse-v1</module>
-    <module>cse-v2</module>
-  </modules>
+  <artifactId>nacos-tests-client</artifactId>
 
+  <properties>
+    <maven.compiler.source>8</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
+  </properties>
   <dependencies>
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
     </dependency>
   </dependencies>
 </project>
