--- a/integration-tests/discovery-tests/common/pom.xml
+++ b/integration-tests/discovery-tests/common/pom.xml
@@ -33,6 +33,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-openfeign-core</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
