--- a/integration-tests/discovery-canary-test/nacos-canary-consumer/pom.xml
+++ b/integration-tests/discovery-canary-test/nacos-canary-consumer/pom.xml
@@ -25,7 +25,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>nacos-canary-consumer</artifactId>
+  <artifactId>nacos-canary-consumer-test</artifactId>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
