--- a/integration-tests/discovery-canary-test/nacos-tests-client/pom.xml
+++ b/integration-tests/discovery-canary-test/nacos-tests-client/pom.xml
@@ -27,10 +27,6 @@
 
   <artifactId>nacos-tests-client</artifactId>
 
-  <properties>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
-  </properties>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -38,4 +34,204 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>docker</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <configuration>
+              <images>
+
+                <image>
+                  <name>nacos/nacos-server:v2.1.2-slim</name>
+                  <alias>nacos-server</alias>
+                  <run>
+                    <env>
+                      <MODE>standalone</MODE>
+                      <PREFER_HOST_MODE>hostname</PREFER_HOST_MODE>
+                    </env>
+                    <wait>
+                      <log>Tomcat started on port</log>
+                      <tcp>
+                        <ports>
+                          <port>8848</port>
+                        </ports>
+                      </tcp>
+                      <time>60000</time>
+                    </wait>
+                    <ports>
+                      <port>nacos-server.port:8848</port>
+                    </ports>
+                  </run>
+                </image>
+
+                <image>
+                  <name>nacos-canary-consumer-test:${project.version}</name>
+                  <alias>nacos-canary-consumer-test</alias>
+                  <run>
+                    <env>
+                      <JAVA_OPTS>
+                        -Dspring.cloud.nacos.discovery.server-addr=http://nacos-server:8848
+                        -Dspring.cloud.nacos.config.server-addr=http://nacos-server:8848
+                      </JAVA_OPTS>
+                      <JAR_PATH>/maven/nacos-canary-consumer-test-${project.version}.jar</JAR_PATH>
+                    </env>
+                    <links>
+                      <link>nacos-server:nacos-server</link>
+                    </links>
+                    <wait>
+                      <log>Started PriceApplication</log>
+                      <tcp>
+                        <ports>
+                          <port>9098</port>
+                        </ports>
+                      </tcp>
+                      <time>120000</time>
+                    </wait>
+                    <ports>
+                      <port>9098:9098</port>
+                    </ports>
+                    <dependsOn>
+                      <container>nacos-server</container>
+                    </dependsOn>
+                  </run>
+                </image>
+                <image>
+                  <name>nacos-canary-provider-test:${project.version}</name>
+                  <alias>nacos-canary-provider-test</alias>
+                  <run>
+                    <env>
+                      <JAVA_OPTS>
+                        -Dspring.cloud.nacos.discovery.server-addr=http://nacos-server:8848
+                        -Dspring.cloud.nacos.config.server-addr=http://nacos-server:8848
+                      </JAVA_OPTS>
+                      <JAR_PATH>/maven/nacos-canary-provider-test-${project.version}.jar</JAR_PATH>
+                    </env>
+                    <links>
+                      <link>nacos-server:nacos-server</link>
+                    </links>
+                    <wait>
+                      <log>Started PriceApplication</log>
+                      <tcp>
+                        <ports>
+                          <port>9091</port>
+                        </ports>
+                      </tcp>
+                      <time>120000</time>
+                    </wait>
+                    <ports>
+                      <port>9091:9091</port>
+                    </ports>
+                    <dependsOn>
+                      <container>nacos-server</container>
+                    </dependsOn>
+                  </run>
+                </image>
+
+                <image>
+                  <name>nacos-canary-provider-beta-test:${project.version}</name>
+                  <alias>nacos-canary-provider-beta-test</alias>
+                  <run>
+                    <env>
+                      <JAVA_OPTS>
+                        -Dspring.cloud.nacos.discovery.server-addr=http://nacos-server:8848
+                        -Dspring.cloud.nacos.config.server-addr=http://nacos-server:8848
+                      </JAVA_OPTS>
+                      <JAR_PATH>/maven/nacos-canary-provider-beta-test-${project.version}.jar</JAR_PATH>
+                    </env>
+                    <links>
+                      <link>nacos-server:nacos-server</link>
+                    </links>
+                    <wait>
+                      <log>Started PriceApplication</log>
+                      <tcp>
+                        <ports>
+                          <port>9092</port>
+                        </ports>
+                      </tcp>
+                      <time>120000</time>
+                    </wait>
+                    <ports>
+                      <port>9092:9092</port>
+                    </ports>
+                    <dependsOn>
+                      <container>nacos-server</container>
+                    </dependsOn>
+                  </run>
+                </image>
+
+                <image>
+                  <name>nacos-canary-gateway-test:${project.version}</name>
+                  <alias>nacos-canary-gateway-test</alias>
+                  <run>
+                    <env>
+                      <JAVA_OPTS>
+                        -Dspring.cloud.nacos.discovery.server-addr=http://nacos-server:8848
+                        -Dspring.cloud.nacos.config.server-addr=http://nacos-server:8848
+                      </JAVA_OPTS>
+                      <JAR_PATH>/maven/nacos-canary-gateway-test-${project.version}.jar</JAR_PATH>
+                    </env>
+                    <links>
+                      <link>nacos-server:nacos-server</link>
+                    </links>
+                    <wait>
+                      <log>Started PriceApplication</log>
+                      <tcp>
+                        <ports>
+                          <port>10088</port>
+                        </ports>
+                      </tcp>
+                      <time>120000</time>
+                    </wait>
+                    <ports>
+                      <port>10088:10088</port>
+                    </ports>
+                    <dependsOn>
+                      <container>nacos-server</container>
+                      <container>nacos-canary-provider-beta-test</container>
+                      <container>nacos-canary-provider-test</container>
+                      <container>nacos-canary-consumer-test</container>
+                    </dependsOn>
+                  </run>
+                </image>
+              </images>
+            </configuration>
+            <executions>
+              <execution>
+                <id>start</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>start</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>stop</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                  <goal>stop</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>com.github.odavid.maven.plugins</groupId>
+            <artifactId>mixin-maven-plugin</artifactId>
+            <configuration>
+              <mixins>
+                <mixin>
+                  <groupId>com.huaweicloud</groupId>
+                  <artifactId>docker-run-config</artifactId>
+                  <version>${project.version}</version>
+                </mixin>
+              </mixins>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
