[#1042]support spring cloud 2022.0.x - partial: update components and fix incompatible changes

--- a/integration-tests/discovery-servicecomb-tests/order-consumer/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-servicecomb-tests/order-consumer/src/main/resources/bootstrap.yaml
@@ -45,8 +45,9 @@ spring:
         firstPullRequired: false
 
       # testing servicecomb swagger generation
+      # TODO： need upgrade service comb api to support jarkata api
       swagger:
-        enableJavaChassisAdapter: true
+        enableJavaChassisAdapter: false
 
 test:
   value:
