--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine/pom.xml
@@ -59,7 +59,7 @@
     </dependency>
     <dependency>
       <groupId>io.github.openfeign</groupId>
-      <artifactId>feign-httpclient</artifactId>
+      <artifactId>feign-hc5</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
