--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-mesh/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-mesh/pom.xml
@@ -53,7 +53,7 @@
 
     <dependency>
       <groupId>io.github.openfeign</groupId>
-      <artifactId>feign-httpclient</artifactId>
+      <artifactId>feign-hc5</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
