--- a/integration-tests/canary-serivcecomb-tests/servicecomb-canary-gateway/src/main/resources/bootstrap.yaml
+++ b/integration-tests/canary-serivcecomb-tests/servicecomb-canary-gateway/src/main/resources/bootstrap.yaml
@@ -27,7 +27,7 @@ spring:
       discovery:
         locator:
           enabled: true
-          lowerCaseServiceId: true
+          lowerCaseServiceId: false
     servicecomb:
       discovery:
         enabled: true
