--- a/integration-tests/discovery-servicecomb-tests/account-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-servicecomb-tests/account-provider/src/main/resources/bootstrap.yaml
@@ -59,6 +59,7 @@ spring:
 
           securityPolicyEnabled: true
           acls:
+            tokenCheckEnabled: true
             app: canary
             mode: permissive
             provider: account
