[#1074] add invoke context get header and fixed allow method

--- a/integration-tests/discovery-nacos-tests/order-consumer/src/main/resources/application.yaml
+++ b/integration-tests/discovery-nacos-tests/order-consumer/src/main/resources/application.yaml
@@ -22,6 +22,8 @@ spring:
       context:
         queryContextMapper:
           query-context: x-query-context
+        headerContextMapper:
+          serviceName: serviceName
       loadbalancer.price:
         retryOnSame: 1
       webmvc:
