[#1074] security policy support separate authentication token and api (#1075)

--- a/integration-tests/discovery-servicecomb-tests/account-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-servicecomb-tests/account-provider/src/main/resources/bootstrap.yaml
@@ -39,6 +39,7 @@ spring:
 
       webmvc:
         publicKey:
+          tokenCheckEnabled: true
           providerEnabled: true
           accessControl:
             black:
