--- a/integration-tests/discovery-nacos-tests/account-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-nacos-tests/account-provider/src/main/resources/bootstrap.yaml
@@ -35,6 +35,7 @@ spring:
     servicecomb:
       webmvc:
         publicKey:
+          tokenCheckEnabled: true
           providerEnabled: true
           accessControl:
             black:
