--- a/spring-cloud-huawei-nacos/pom.xml
+++ b/spring-cloud-huawei-nacos/pom.xml
@@ -42,6 +42,10 @@
             <groupId>com.huaweicloud</groupId>
             <artifactId>spring-cloud-huawei-router</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
     
 </project>
