fixed review opinions

--- a/spring-cloud-huawei-nacos/pom.xml
+++ b/spring-cloud-huawei-nacos/pom.xml
@@ -45,6 +45,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     
