--- a/integration-tests/discovery-nacos-tests/pom.xml
+++ b/integration-tests/discovery-nacos-tests/pom.xml
@@ -36,6 +36,7 @@
     <module>account-provider</module>
     <module>webflux-provider</module>
     <module>discovery-tests-client</module>
+    <module>cross-group-consumer</module>
   </modules>
 
 </project>
